# cse180

./: gitNotes.txt
MRTP/finalproject/src/human_detector/: CMakeLists.txt  package.xml
MRTP/finalproject/src/human_detector/include/human_detector/: detector_logic.hpp
MRTP/finalproject/src/human_detector/src/: detector_logic.cpp  human_detection_node.cpp
MRTP/tb4_humans_ws/: direction.txt  my_warehouse_map.yaml  prompts.txt
MRTP/tb4_humans_ws/src/tb4_human_detector/: CMakeLists.txt  package.xml
MRTP/tb4_humans_ws/src/tb4_human_detector/src/: human_detector.cpp
MRTP_1/CSE180/src/lab4/: CMakeLists.txt  package.xml
MRTP_1/CSE180/src/lab4/src/: chaser.cpp
MRTP_1/CSE180/src/remap/: CMakeLists.txt  package.xml
MRTP_1/CSE180/src/remap/src/: remap.cpp
MRTP_1/CSE180/src/robctl/: CMakeLists.txt  package.xml
MRTP_1/CSE180/src/robctl/src/: controlturtlebot.cpp  turtlebotposesensor.cpp
MRTP_1/docker/: Makefile
MRTP_2/lab5/src/tracking/: CMakeLists.txt  package.xml
MRTP_2/lab5/src/tracking/src/: trackdifferences.cpp
MRTP_3/lab5/src/tracking/: CMakeLists.txt  package.xml
MRTP_3/lab5/src/tracking/src/: trackdifferences.cpp
MRTP_4/lab6/src/oopsquare/: CMakeLists.txt  package.xml
MRTP_4/lab6/src/oopsquare/src/: oopsquare.cpp
MRTP_5/lab7/src/lab7/: CMakeLists.txt  package.xml
MRTP_5/lab7/src/lab7/src/: testnavigator_lab7.cpp
